<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#927EB1"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/animal_name"
                android:textColor="#040404"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewAnimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/AnimalPicture"
                android:drawingCacheQuality="auto"
                android:padding="3dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/random_facts"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="casual"
                android:text="@string/description"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="For more information:"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="casual"
                android:text="@string/url_link"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:backgroundTint="#673AB7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=" " />

        </LinearLayout>
    </ScrollView>

</LinearLayout>